istio/authorization/allow/dev-allow-target-cart.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-cart
  namespace: dev
spec:
  selector:
    matchLabels:
      app: cart
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/order
