istio/authorization/allow/dev-allow-target-inventory.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-inventory
  namespace: dev
spec:
  selector:
    matchLabels:
      app: inventory
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/order
