istio/authorization/allow/dev-allow-target-location.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-location
  namespace: dev
spec:
  selector:
    matchLabels:
      app: location
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/customer
              - cluster.local/ns/dev/sa/inventory
              - cluster.local/ns/dev/sa/tax
