istio/authorization/allow/dev-allow-target-media.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-media
  namespace: dev
spec:
  selector:
    matchLabels:
      app: media
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/product
              - cluster.local/ns/dev/sa/cart
              - cluster.local/ns/dev/sa/payment
