istio/authorization/allow/dev-allow-target-order.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-order
  namespace: dev
spec:
  selector:
    matchLabels:
      app: order
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/payment
              - cluster.local/ns/dev/sa/delivery
              - cluster.local/ns/dev/sa/recommendation
              - cluster.local/ns/dev/sa/rating
