istio/authorization/allow/dev-allow-target-payment-paypal.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-payment-paypal
  namespace: dev
spec:
  selector:
    matchLabels:
      app: payment-paypal
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/payment
