istio/authorization/allow/dev-allow-target-product.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-product
  namespace: dev
spec:
  selector:
    matchLabels:
      app: product
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/cart
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/dev/sa/recommendation
              - cluster.local/ns/dev/sa/inventory
              - cluster.local/ns/dev/sa/search
              - cluster.local/ns/dev/sa/promotion
              - cluster.local/ns/dev/sa/rating
