istio/authorization/allow/dev-allow-target-search.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-search
  namespace: dev
spec:
  selector:
    matchLabels:
      app: search
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
